--- a/MagicVilla.Web/Views/VillaNumber/CreateVillaNumber.cshtml
+++ b/MagicVilla.Web/Views/VillaNumber/CreateVillaNumber.cshtml
@@ -1,4 +1,4 @@
-@model MagicVilla_Web.Models.VM.VillaNumberCreateVM
+@model MagicVilla.Web.Models.VM.VillaNumberCreateVM
 
 <form asp-action="CreateVillaNumber">
     <br />
@@ -18,13 +18,13 @@
             </div>
 
             <div class="col-2">
-                <label asp-for="VillaNumber.VillaID" class="control-label pt-2" style="font-size:20px;"></label>
+                <label asp-for="VillaNumber.VillaId" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <select asp-for="VillaNumber.VillaID" class="form-select" asp-items="@Model.VillaList">
+                <select asp-for="VillaNumber.VillaId" class="form-select" asp-items="@Model.VillaList">
                     <option disabled selected>--Select Villa--</option>
                 </select>
-                <span asp-validation-for="VillaNumber.VillaID" class="text-danger"></span>
+                <span asp-validation-for="VillaNumber.VillaId" class="text-danger"></span>
             </div>
             <div class="col-2">
                 <label asp-for="VillaNumber.SpecialDetails" class="control-label pt-2" style="font-size:20px;"></label>
