--- a/MagicVilla.Web/Views/VillaNumber/DeleteVillaNumber.cshtml
+++ b/MagicVilla.Web/Views/VillaNumber/DeleteVillaNumber.cshtml
@@ -1,4 +1,4 @@
-@model MagicVilla_Web.Models.VM.VillaNumberDeleteVM
+@model MagicVilla.Web.Models.VM.VillaNumberDeleteVM
 
 <form asp-action="DeleteVillaNumber">
     <br />
@@ -16,10 +16,10 @@
             </div>
 
             <div class="col-2">
-                <label asp-for="VillaNumber.VillaID" class="control-label pt-2" style="font-size:20px;"></label>
+                <label asp-for="VillaNumber.VillaId" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <select asp-for="VillaNumber.VillaID" disabled class="form-select" asp-items="@Model.VillaList">
+                <select asp-for="VillaNumber.VillaId" disabled class="form-select" asp-items="@Model.VillaList">
                     <option disabled selected>--Select Villa--</option>
                 </select>
             </div>
